// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Primary renders correctly 1`] = `
<div>
  <button
    class="sc-hLseeU sc-eDDNvR lmVMho hczWgw"
  >
    Hello there!
  </button>
</div>
`;

exports[`Button > Secondary renders correctly 1`] = `
<div>
  <button
    class="sc-hLseeU sc-jTrPJq lmVMho VvJzI"
  >
    Hello there secondary!
  </button>
</div>
`;
